# olsen-randerson

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .zenodo.json  CITATION.cff  LICENSE  MANIFEST.in  PSU Open Source Software License Agreement.docx  README.rst  genindex.html  index.html  objects.inv  olsen_randerson.fisher.html  olsen_randerson.html  py-modindex.html  requirements-test.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: dailytoxrun.yml  pythonpackage.yml
_modules/: index.html  olsen_randerson.html
_modules/olsen_randerson/: fisher.html
_sources/: olsen_randerson.fisher.rst.txt  olsen_randerson.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst
src/olsen_randerson/: __init__.py  fisher.py
tests/: test_fisher.py  test_olsen_randerson.py
