[metadata]
name=olsen-randerson
version=file:VERSION
description=A package to perform Olsen-Randerson flux downscaling
classifiers=
    Development Status :: 1 - Development
    Intended Audience :: Science/Research
    Topic :: Science/Engineering :: Atmospheric Science
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
license=BSD3
license_file=PSU Open Source Software License Agreement.docx
license_files =
    "PSU Open Source Software License Agreement.docx"
    LICENSE
platform=any
keywords=
    Flux downscaling
    carbon dioxide flux
author=DWesl
author_email=22566757+DWesl@users.noreply.github.com
long_description=file:README.rst
long_description_content_type=text/x-rst
url=https://psu-inversion.github.io/olsen-randerson
download_url=https://github.com/psu-inversion/olsen-randerson/releases
project_urls=
    documentation=https://psu-inversion.github.io/olsen-randerson
    bug tracker=https://github.com/psu-inversion/olsen-randerson/issues
    repository=https://github.com/psu-inversion/olsen-randerson

[options]
tests_require=
    pytest-cov
    hypothesis[numpy,pandas]
install_requires=numpy
packages=find:
modules=olsen_randerson
python_requires= >=2.7, <4, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[extras_require]
fisher=
    pandas>=0.19.0

[options.packages.find]
where=src

[bdist_wheel]
universal=True

[sdist]
formats=bztar,zip,gztar

[pydocstyle]
convention=numpy

[flake8]
ignore=D413
rst-roles=
    # Sphinx
    abbr
    # My extlinks
    doi
    arxiv
    jstor
docstring-convention=numpy
doctests=True
exclude=.git,__pycache__,*_flymake.py,.tox,.eggs,*.egg,build,dist
max-complexity=15

[tool:pytest]
addopts=
    --doctest-modules --ignore-glob=*_flymake.py
    --cov --cov-append --cov-report=